# larql

./: AGENTS.md  Cargo.toml  META_MODEL.md  Makefile  README.md  ROADMAP.md  WORKING_MODEL.md
.github/workflows/: bench-regress.yml  larql-cli.yml  larql-compute-metal.yml  larql-compute.yml  shannon-verify.yml
crates/larql-cli/: Cargo.toml  README.md
crates/larql-compute/: Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md
crates/larql-compute-metal/: Cargo.toml  coverage-policy.json
crates/larql-compute-metal/benches/: matmul.rs  quant_matvec.rs
crates/larql-compute-metal/examples/: compare_decode.rs  compare_formats.rs  compare_generation.rs  compare_ollama.rs  compare_pipeline.rs  diag_decode_pipeline.rs  diag_profile_kernels.rs  diag_shader_bench.rs
crates/larql-compute-metal/src/: async_compute_backend_impl.rs  decode_hybrid.rs  kv_dispatch_impl.rs  lib.rs
crates/larql-compute-metal/src/buffers/: mod.rs
crates/larql-compute-metal/src/decode/: encode_attn.rs  encode_ffn.rs  encode_qkv.rs  mod.rs  moe_interleave.rs  profile.rs
crates/larql-compute-metal/src/diag/: mod.rs  shader_bench.rs
crates/larql-compute-metal/src/trait_impl/: decode.rs  mod.rs
crates/larql-compute-metal/tests/: test_decode_diag.rs  test_kernel_lm_head_gemv.rs  test_kernel_moe_expert_dispatch.rs  test_metal_decode_synthetic.rs  test_metal_shaders.rs
crates/larql-compute-metal/tests/common/: mod.rs
crates/larql-compute/src/: ffn.rs  forward_overrides.rs  kv_index.rs  lib.rs  per_layer_decode_state.rs  pipeline.rs  pipeline_layer.rs  residual.rs  state_handle.rs  test_fixtures.rs
crates/larql-compute/src/async_compute_backend/: cpu.rs  mod.rs
crates/larql-compute/src/attention/: block.rs  decode.rs  gpu.rs  mod.rs  rope.rs
crates/larql-compute/src/backend/: capability.rs  decode.rs  helpers.rs  mod.rs
crates/larql-compute/src/ffn/: weight.rs
crates/larql-compute/src/forward/: dump_config.rs  embed.rs  hooks.rs  layer.rs  lens.rs  mod.rs  ops.rs  ple.rs  vocab_proj.rs
crates/larql-compute/src/forward/predict/: mod.rs  raw.rs
crates/larql-compute/src/kquant_forward/: cached.rs  dequant.rs  hooks.rs  mod.rs  tensors.rs  walk_ffn.rs
crates/larql-compute/src/kv_dispatch/: cpu.rs  mod.rs
crates/larql-inference/: Cargo.toml  PERFORMANCE.md  README.md
crates/larql-inference/docs/specs/: apollo-engine.md  async-compute-backend.md  boundary-per-layer-engine.md  compute-backend-redesign.md  engine-state-vs-execution.md  kv-engine-unification.md  layer-engine.md  markov-residual-codec-engine.md  markov-residual-engine.md  no-cache-engine.md  standard-engine.md  turbo-quant-engine.md  unlimited-context-engine.md  zone-engine.md
crates/larql-inference/examples/: backend_demo.rs  cpu_gpu_diag.rs  decode_vs_prefill.rs  moe_grid_generate.rs  predict_from_residual.rs  probe_contribution_distribution.rs  probe_residual_stream.rs  profile_faithful_walk.rs  residual_diff.rs  stage_bisect.rs
crates/larql-inference/src/: forward_overrides.rs  kv_engine.rs  lib.rs  residual.rs  test_utils.rs  tokenizer.rs
crates/larql-inference/src/async_compute_backend/: cpu.rs  mod.rs
crates/larql-inference/src/attention/: block.rs  decode.rs  gpu.rs  gqa.rs  mod.rs  rope.rs
crates/larql-inference/src/experts/: loader.rs
crates/larql-inference/src/ffn/: mod.rs  weight.rs
crates/larql-inference/src/forward/: dump_config.rs  embed.rs  hooks.rs  infer_patched.rs  layer.rs  layer_interventions.rs  lens.rs  ops.rs  ple.rs  vocab_proj.rs
crates/larql-inference/src/forward/predict/: raw.rs  types.rs
crates/larql-inference/src/kv_dispatch/: cpu.rs  helpers.rs  mod.rs
crates/larql-inference/src/layer_graph/: cached.rs  hybrid.rs  pipeline_layer.rs
crates/larql-inference/src/layer_graph/generate/gpu/: decode_loop.rs  mod.rs  prefill.rs
crates/larql-inference/src/layer_graph/grid/: setup.rs
crates/larql-inference/src/vindex/: mod.rs  walk_config.rs
crates/larql-inference/src/vindex/kquant_forward/: cached.rs  hooks.rs  mod.rs
crates/larql-inference/src/vindex/walk_ffn/: helpers.rs  mod.rs  selector.rs  sparse.rs
crates/larql-inference/tests/: test_arch_golden.rs  test_backend.rs  test_cpu_metal_parity.rs  test_decode_consistency.rs  test_decode_stage_bisect.rs  test_generate_q4k_cpu.rs  test_layer_graph_integration.rs  test_logits_goldens.rs  test_q4k_cached_parity.rs
crates/larql-kv/: CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md
crates/larql-kv/benches/: engine_decode.rs
crates/larql-kv/docs/: state-policy-reconciliation-2026-05-21.md  state-policy.md
crates/larql-kv/examples/: boundary_per_layer_parity_gate.rs  contract_classify_cached_ffn.rs  engine_ladder.rs  markov_walk_kv_parity.rs  w10_parity_gate.rs
crates/larql-kv/src/: generation.rs  lib.rs  profiler.rs  vindex_compare.rs
crates/larql-kv/src/engines/: mod.rs
crates/larql-kv/src/engines/apollo/: engine.rs  executor.rs  mod.rs
crates/larql-kv/src/engines/boundary_kv/: engine.rs  gate.rs  mod.rs
crates/larql-kv/src/engines/boundary_per_layer/: cold_tier.rs  dispatch.rs  engine.rs  executor.rs  mod.rs  walk.rs
crates/larql-kv/src/engines/markov_residual/: compute.rs  dispatch.rs  engine.rs  helpers.rs  mod.rs  store.rs  walk.rs
crates/larql-kv/src/engines/markov_residual_codec/: compute.rs  dispatch.rs  engine.rs  executor.rs  helpers.rs  mod.rs  store.rs  walk.rs
crates/larql-kv/src/engines/turbo_quant/: dispatch.rs  engine.rs  mod.rs  packing.rs  rotation.rs
crates/larql-kv/src/engines/unlimited_context/: dispatch.rs  engine.rs  extend.rs  mod.rs
crates/larql-kv/tests/: dispatch_parity.rs
crates/larql-lql/: Cargo.toml
crates/larql-lql/src/executor/: tests.rs
crates/larql-lql/tests/: coverage_sweep_synthetic.rs
crates/larql-models/: Cargo.toml  coverage-policy.json
crates/larql-models/src/: lib.rs  test_fixtures.rs
crates/larql-models/src/loading/: gguf.rs
crates/larql-server/: Cargo.toml  coverage-policy.json
crates/larql-server/tests/: test_openai_completions_coverage.rs  test_walk_ffn_q8k_coverage.rs
crates/larql-vindex/: Cargo.toml  ROADMAP.md  (+1 more)
(+40 files in other folders)
