[workspace]
resolver = "2"
members = [
    # larql-specific
    "crates/larql-models",
    "crates/larql-compute",
    "crates/larql-compute-metal",
    "crates/larql-core",
    "crates/larql-vindex",
    "crates/larql-vindex-spec",
    "crates/larql-inference",
    "crates/larql-kv",
    "crates/larql-lql",
    "crates/larql-cli",
    "crates/larql-server",
    "crates/larql-router",
    "crates/larql-router-protocol",
    "crates/larql-python",
    # boundary codec (Phase 1-3 of BOUNDARY_REF_PROTOCOL)
    "crates/larql-boundary",
    # portable (extract to sibling repos later, names stable)
    "crates/model-compute",
]
default-members = [
    "crates/larql-models",
    "crates/larql-compute",
    "crates/larql-compute-metal",
    "crates/larql-core",
    "crates/larql-vindex",
    "crates/larql-vindex-spec",
    "crates/larql-inference",
    "crates/larql-kv",
    "crates/larql-lql",
    "crates/larql-cli",
    "crates/larql-server",
    "crates/larql-router",
    "crates/larql-router-protocol",
    "crates/larql-boundary",
    "crates/model-compute",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = []
license = "Apache-2.0"
repository = "https://github.com/chrishayuk/chuk-larql-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"

[profile.test.package."*"]
debug = false

# Temporary: enable line tables in release builds so samply / flamegraph
# can resolve symbol names. Cheap (no full debug info; just symbols
# + line numbers). Remove once profiling is done.
[profile.release]
debug = "line-tables-only"
split-debuginfo = "packed"
