[package]
name = "larql-compute"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compute backend trait + CPU implementation for LARQL. GPU backends ship as sibling crates (larql-compute-metal, future larql-compute-vulkan / larql-compute-cuda)."
keywords = ["matmul", "cpu", "blas", "quantization", "trait"]
categories = ["science"]

[dependencies]
# Matrix types — blas feature added per-platform below where a backend exists
ndarray = "0.16"
# MoE expert parallelism: top-k experts run independently per token.
rayon = "1.10"
# Wire-format constants (Q4_K_BLOCK_ELEMS, etc.) for padding decisions.
# Tests/benches depend on it too — keep both lists in sync.
larql-models = { path = "../larql-models" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"], default-features = false }
openblas-src = { version = "0.10", features = ["system"] }

[target.'cfg(target_os = "macos")'.dependencies]
# `metal` + `objc` moved to `larql-compute-metal` per ADR-019. This crate
# is CPU-only; Metal GPU dependencies live in the sibling crate.
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }

[target.'cfg(target_os = "windows")'.dependencies]
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"], default-features = false }
openblas-src = { version = "0.10", features = ["system"] }


[features]
default = []
# Opt-in gate for the slow integration suites. Plain
# `cargo test -p larql-compute` skips them so the dev loop stays under
# ~10 s; CI / release runs flip this on to get coverage.
heavy_tests = []
# Synthetic `KvIndex` fixtures for downstream test crates. Off by
# default so production builds never compile the fixture code. Enable
# from a consumer's `[dev-dependencies]` entry, e.g.
# `larql-compute = { path = "../larql-compute", features = ["test-utils"] }`.
# Pulls in `larql-models/test-utils` for the Q4K-friendly `ModelWeights`
# fixtures the index builder consumes.
test-utils = ["larql-models/test-utils"]

[build-dependencies]
cc = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
serde_json = "1"
memmap2 = "0.9"
# Enable `larql-models`' `test-utils` feature so the moved-down
# forward-pass tests in this crate can construct `ModelWeights` via
# `larql_models::test_fixtures::make_test_weights`.
larql-models = { path = "../larql-models", features = ["test-utils"] }

[[bench]]
name = "linalg"
harness = false

# No external `cfg(cargo-clippy)` macros reach this crate after the
# `metal-rs` / `objc` deps moved to larql-compute-metal, so no
# crate-wide cfg-allowlist is needed.
