[package]
name = "larql-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transformer inference engine — forward pass, attention, FFN, layer norm from safetensors weights"
keywords = ["transformer", "inference", "llm", "interpretability"]
categories = ["science"]

[dependencies]
# `test-utils` feature gives `larql_models::test_fixtures::make_test_weights`,
# which inference's `pub mod test_utils;` re-exports for downstream test
# crates (larql-kv tests, larql-compute tests, etc.). The feature gates
# ~80 LOC of synthetic ModelWeights builder code; production callers
# don't reach it, and link-time dead-code elimination drops it from
# binaries that don't use it.
larql-models = { path = "../larql-models", features = ["test-utils"] }
larql-compute = { path = "../larql-compute" }
# Apple-only sibling backend.  Optional + activated by the local
# `gpu` feature; non-Mac builds skip the dep graph entirely.
larql-compute-metal = { path = "../larql-compute-metal", optional = true }
larql-core = { path = "../larql-core" }
larql-vindex = { path = "../larql-vindex" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zip = { version = "2", default-features = false }
rand = "0.8"
rand_distr = "0.4"

# Model weights
safetensors = "0.7"
memmap2 = "0.9"

# System
libc = "0.2"

# Matrix ops (BLAS-accelerated on supported platforms; pure-Rust ndarray on Android)
ndarray = "0.16"

# Parallelism for the walk loop (per-feature work is embarrassingly parallel).
rayon = "1.10"

# Tokenizer
tokenizers = "0.21"

# Used by `residual_diff::capture` to drive the backend-side per-layer
# dump hooks into a private dir per call. dev-only would force every
# crate consumer to pull tempfile in just to use the in-memory diff API.
tempfile = "3"

# Chat-template rendering (HF `tokenizer_config.json::chat_template` is Jinja).
# `minijinja-contrib` ships `pycompat::unknown_method_callback` which gives us
# Python-style method calls (`.get()`, `.items()`, `.startswith()`, …) that
# Gemma 4 / Qwen / Llama-3 chat templates rely on.
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }

# Remote FFN backend (RemoteWalkBackend → POST /v1/walk-ffn)
reqwest = { version = "0.12", features = ["blocking", "json"] }
half = "2"

# gRPC expert client (RemoteMoeBackend → ExpertService via tonic)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
tonic = { version = "0.13", features = ["tls-ring", "tls-webpki-roots"] }
prost = "0.13"
larql-router-protocol = { path = "../larql-router-protocol" }
async-stream = "0.3"
futures = "0.3"

# WASM expert registry
wasmtime = { version = "29", default-features = false, features = ["cranelift", "runtime"] }
wasmtime-wasi = "29"
anyhow = "1"


[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"], default-features = false }
openblas-src = { version = "0.10", features = ["system"] }

[target.'cfg(target_os = "macos")'.dependencies]
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }

[target.'cfg(target_os = "windows")'.dependencies]
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"], default-features = false }
openblas-src = { version = "0.10", features = ["system"] }

[features]
default = []
# Umbrella for GPU-backend support. Today this pulls in the
# `larql-compute-metal` sibling crate; future Vulkan/CUDA backends compose
# under the same flag without forcing a per-call-site feature matrix.
# Cascades `larql-vindex/gpu` so its GPU-specific paths (bench harness,
# hybrid decode glue) compile alongside ours.
gpu = ["dep:larql-compute-metal", "larql-vindex/gpu"]

[[example]]
name = "cpu_gpu_diag"
required-features = ["gpu"]

[[example]]
name = "decode_vs_prefill"
required-features = ["gpu"]

[[example]]
name = "residual_diff"
required-features = ["gpu"]

[[example]]
name = "stage_bisect"
required-features = ["gpu"]

[dev-dependencies]
assert_approx_eq = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
larql-kv = { path = "../larql-kv" }

[[bench]]
name = "wire_codec"
harness = false
