[package]
name = "larql-kv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pluggable KV-cache engines for larql-inference (markov-rs, unlimited-context, turbo-quant, apollo)"

[dependencies]
larql-inference = { path = "../larql-inference" }
larql-compute = { path = "../larql-compute" }
larql-compute-metal = { path = "../larql-compute-metal", optional = true }
larql-vindex = { path = "../larql-vindex" }
larql-boundary = { path = "../larql-boundary" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

ndarray = "0.16"
zip = { version = "2", default-features = false }

rand = "0.8"
rand_distr = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"], default-features = false }
openblas-src = { version = "0.10", features = ["system"] }

[target.'cfg(target_os = "macos")'.dependencies]
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }

[target.'cfg(target_os = "windows")'.dependencies]
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"], default-features = false }
openblas-src = { version = "0.10", features = ["system"] }

[features]
default = []
gpu = ["dep:larql-compute-metal", "larql-inference/gpu"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "engine_decode"
harness = false

[[example]]
name = "engine_ladder"
