[package]
name = "larql-lql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "LQL parser, executor, and REPL for LARQL"

[dependencies]
larql-compute = { path = "../larql-compute" }
larql-compute-metal = { path = "../larql-compute-metal", optional = true }
larql-core = { path = "../larql-core" }
larql-inference = { path = "../larql-inference" }
larql-models = { path = "../larql-models" }
larql-vindex = { path = "../larql-vindex" }
ndarray = "0.16"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rustyline = "15"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
# Umbrella for GPU-backend support. Mirrors the `gpu` feature in
# `larql-compute` / `larql-inference` / `larql-vindex` so workspace
# tests can be built with `--features gpu` from this package.
gpu = ["dep:larql-compute-metal", "larql-inference/gpu", "larql-vindex/gpu"]

[dev-dependencies]
criterion = "0.5"
# Mocked HTTP server for testing the Remote backend's forwarders
# without spinning up a real `larql-server`. Each test wires a
# `mockito::Server`, points the session at it via `USE "<url>"`, and
# asserts on the canned response.
mockito = "1.7"
# Tempdirs for the synthetic-model integration tests that need an
# on-disk vindex+weights fixture (see
# `larql_inference::test_utils::write_synthetic_model_dir`).
tempfile = "3"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "executor"
harness = false

[[bench]]
name = "compile"
harness = false
